--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </ul>
   </nav>
   <div class="whitesecinfo">
-    <p class="p1whitesec"><a>Achetez en ligne</a> et profitez de l'aide de nos 
+    <p class="p1whitesec"><a>Achetez en ligne Elie</a> et profitez de l'aide de nos 
         spécialistes, de la livraison gratuite sans contact et de bien d'autres avantages.</p>
   </div>
   <main class="ipadsection">
